# web.browser.chromium

./: .gitignore  CMakeLists.txt  FindOpenGLES.cmake  LICENSE.md  README.md  TODO.txt  versions.cmake
CEFParts/: 0001-CEF-2357-Add-Kodi-related-changes-Version-0.0.1.patch  CEF-2357.1274.g7b49af6-Add-Kodi-related-changes-Version-0.0.2.patch  LICENSE-Chromium.txt  README.md  automate-git.py  cef-automate-git-for-kodi.py  cef-complete-build.sh  install-build-deps-android.sh  install-build-deps-kodi.sh  install-build-deps.sh  install-chroot.sh  tool_functions
CMake/: ArchSetup.cmake  FindD3DX9.cmake  FindDirectX.cmake  FindOpenGLES2.cmake  FindOpenGl.cmake  Findglm.cmake  KitModules.cmake  Macros.cmake  cef-binary.cmake  copy-cef.cmake  copy_cef_final.cmake  web-addon-helpers.cmake
LICENSES/: LICENSE.GPL-3-or-later  LICENSE.ICU-License  README.md
debian/: changelog.in  control  copyright  rules
depends/common/chromium/: CMakeLists.txt
depends/common/chromium/CMake/: ArchSetup.cmake  LoadAutomateGit.cmake  copy-cef.cmake
depends/osx/glm/: flags.txt  (+2 more)
docs/: README.Android.md  README.Fedora.md  README.FreeBSD.md  README.Linux.md  README.RaspberryPi.md  README.Ubuntu.md  README.Windows.md  README.iOS.md  README.macOS.md  README.md  README.openSUSE.md
lib/cef-base/: CMakeLists.txt  automate-git.py  copy-cef.cmake
lib/kodi-dev-kit/: CMakeLists.txt
lib/kodi-dev-kit/src/kodi/: AddonBaseInternal.cpp  AddonBaseInternal.h  AudioEngine.cpp  CMakeLists.txt  Filesystem.cpp  General.cpp  Network.cpp  Processor.cpp
lib/kodi-dev-kit/src/kodi/addon-instance/: Web.cpp  Web.h
lib/kodi-dev-kit/src/kodi/gui/: General.cpp  ListItem.cpp  Window.cpp
lib/kodi-dev-kit/src/kodi/gui/controls/: Button.cpp  Edit.cpp  FadeLabel.cpp  Image.cpp  Label.cpp  Progress.cpp  RadioButton.cpp  Rendering.cpp  SettingsSlider.cpp  Slider.cpp  Spin.cpp  TextBox.cpp
lib/kodi-dev-kit/src/kodi/gui/dialogs/: ContextMenu.cpp  ExtendedProgress.cpp  FileBrowser.cpp  Keyboard.cpp  Numeric.cpp  OK.cpp  Progress.cpp  Select.cpp  TextViewer.cpp  YesNo.cpp
lib/kodi-dev-kit/src/kodi/gui/input/: Action.cpp
lib/kodi-dev-kit/src/sandbox/: CMakeLists.txt  IMsgHdl.h  OpenGLExtensionCheck.cpp  OpenGLExtensionCheck.h  ShareProcessReceiver.cpp  ShareProcessReceiver.h  ShareProcessTransmitter.cpp  ShareProcessTransmitter.h  SharedMemControl.cpp  SharedMemControl.h  SharedMemControlPosixMMAP.cpp  SharedMemControlPosixMMAP.h  SharedMemControlPosixSHMOP.cpp  SharedMemControlPosixSHMOP.h  shared_data_structure.h  shared_process_func_child.h  shared_process_func_group.h  shared_process_func_parent.h  socket.h
lib/kodi-dev-kit/src/sandbox/kodi/: AddonBase.h  AudioEngine.h  Filesystem.h  General.h  Network.h  Processor.h
lib/kodi-dev-kit/src/sandbox/kodi/addon-instance/: Web.h
lib/kodi-dev-kit/src/sandbox/kodi/gui/: General.h  ListItem.h  Window.h
lib/kodi-dev-kit/src/sandbox/kodi/gui/controls/: Button.h  Edit.h  FadeLabel.h  Image.h  Label.h  Progress.h  RadioButton.h  Rendering.h  SettingsSlider.h  Slider.h  Spin.h  TextBox.h
lib/kodi-dev-kit/src/sandbox/kodi/gui/dialogs/: ContextMenu.h  ExtendedProgress.h  FileBrowser.h  Keyboard.h  Numeric.h  OK.h  Progress.h  Select.h  TextViewer.h  YesNo.h
lib/kodi-dev-kit/src/sandbox/kodi/gui/input/: Action.h  ActionIDs.h
lib/kodi-dev-kit/src/server/: CMakeLists.txt  IMsgHdl.h  Launcher.cpp  Launcher.h  LauncherPosix.cpp  LauncherPosix.h
lib/kodi-dev-kit/src/server/kodi/: AddonBase.cpp  AddonBase.h  AudioEngine.cpp  AudioEngine.h  Filesystem.cpp  Filesystem.h  General.cpp  General.h  Network.cpp  Network.h
lib/kodi-dev-kit/src/server/kodi/addon-instance/: Web.cpp  Web.h
lib/kodi-dev-kit/src/server/kodi/gui/: General.cpp  General.h  ListItem.cpp  ListItem.h  Window.cpp  Window.h
lib/kodi-dev-kit/src/server/kodi/gui/controls/: Button.cpp  Button.h  Edit.cpp  Edit.h  FadeLabel.cpp  FadeLabel.h  Image.cpp  Image.h  Label.cpp  Label.h  Progress.cpp  Progress.h  RadioButton.cpp  RadioButton.h  Rendering.cpp  Rendering.h  SettingsSlider.cpp  SettingsSlider.h  Slider.cpp  Slider.h  Spin.cpp  Spin.h  TextBox.cpp  TextBox.h
lib/kodi-dev-kit/src/server/kodi/gui/dialogs/: ContextMenu.cpp  ContextMenu.h  ExtendedProgress.cpp  ExtendedProgress.h  FileBrowser.cpp  FileBrowser.h  Keyboard.cpp  Keyboard.h  Numeric.cpp  Numeric.h  OK.cpp  OK.h  Progress.cpp  Progress.h  Select.cpp  Select.h  TextViewer.cpp  TextViewer.h  YesNo.cpp  YesNo.h
lib/kodi-dev-kit/src/server/kodi/gui/input/: Action.cpp  Action.h
lib/kodi-dev-kit/src/server/utils/: Log.cpp  Log.h  Utils.h  uuid.h
patches/: 0001-CEF-Add-Kodi-related-changes-Version-0.0.1.patch
src/: MessageIds.cpp  MessageIds.h
src/addon/: .WebBrowserClient.cpp.kate-swp  AppBrowser.cpp  AppBrowser.h  DOMVisitor.cpp  DOMVisitor.h  DownloadHandler.cpp  DownloadHandler.h  ExtensionUtils.cpp  ExtensionUtils.h  GeolocationPermission.cpp  GeolocationPermission.h  MessageIds.cpp  MessageIds.h  Messenger.cpp  Messenger.h  PrintHandler.cpp  PrintHandler.h  RequestContextHandler.cpp  RequestContextHandler.h  ResourceManager.cpp  ResourceManager.h  SandboxControl.cpp  SandboxControl.h  SchemeKodi.cpp  SchemeKodi.h  SystemTranslator.h  URICheckHandler.cpp  URICheckHandler.h  UploadHandler.cpp  UploadHandler.h  ViewRendererGL.cpp  ViewRendererGL.h  Web.h  WebBrowserClient.cpp  WebBrowserClient.h  WebBrowserClientBase.cpp  WebBrowserClientBase.h  WebBrowserClientDirectX.cpp  WebBrowserClientDirectX.h  WebBrowserClientOpenGL.cpp  (+9 more)
src/app/: AppOther.cpp  AppOther.h  AppRenderer.cpp  AppRenderer.h  LibraryLoader.cpp  LibraryLoader.h  Main.cpp  MessageIds.cpp  MessageIds.h  NOTE  WebApp.cpp  WebAppBrowser.cpp  WebAppRenderer.cpp  WebAppRenderer.h  WebMain.cpp  client_app.cpp  client_app_other.cpp  client_app_other.h  client_app_renderer.cpp  client_app_renderer.h  client_switches.cpp  main.cpp  main.h  main_linux.cpp  main_mac.cpp  main_win.cpp
src/icon/: chromium_for_kodi_logo.xcf
test/: test.html
test/script.hello.web.world/: addon.html  addon.py  addon.xml
web.KODIChromiumBrowser/: addon.xml
web.browser.chromium/: addon.xml  addon.xml.in
(+261 files in other folders)
